added city listing pages

--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,32 @@
               <li class="drop"><a href="/sold.html">Sold</a></li>
               <li class="drop"><a href="/search.html">Search</a></li>
             </ul>
-          <li class="nav-link"><a href="/mortgage.html">MORTGAGE CALCULATOR</a></li>
-          <li class="nav-link"><a class="dropdown-button" href="#!" data-target="dropdown2">ABOUT<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li class="nav-link"><a class="dropdown-button" href="#!" data-target="dropdown2">CITIES<i class="material-icons right">arrow_drop_down</i></a></li>
             <ul id="dropdown2" class="dropdown-content">
+              <li class="drop"><a class="nested-dropdown-button" href="#!" data-target="dropdown3">White Rock<i class="material-icons right">chevron_right</i></a></li>
+              <li class="drop"><a class="nested-dropdown-button" href="#!" data-target="dropdown4">South Surrey<i class="material-icons right">chevron_rightt</i></a></li>
+            </ul>
+            <ul id="dropdown3" class="dropdown-content">
+                <li class="nested-drop"><a href="/white-rock-condos.html">White Rock Condos</a></li>
+                <li class="nested-drop"><a href="/white-rock-townhouses.html">White Rock Townhouses</a></li>
+                <li class="nested-drop"><a href="/white-rock-homess.html">White Rock Homes</a></li>
+              </ul>
+           
+            <ul id="dropdown4" class="dropdown-content">
+              <li class="nested-drop"><a href="#!">South Surrey Condos</a></li>
+              <li class="nested-drop"><a href="#!">South Surrey Townhouses</a></li>
+              <li class="nested-drop"><a href="#!">South Surrey Homes</a></li>
+            </ul>
+          <li class="nav-link"><a href="/mortgage.html">MORTGAGE CALCULATOR</a></li>
+          <li class="nav-link"><a class="dropdown-button" href="#!" data-target="dropdown5">ABOUT<i class="material-icons right">arrow_drop_down</i></a></li>
+            <ul id="dropdown5" class="dropdown-content">
               <li class="drop"><a href="#!">Testimonials</a></li>
               <li class="drop"><a href="/chris.html">Meet Chris</a></li>
             </ul>
           <li class="nav-link"><a href="/contact.html">CONTACT</a></li>
         </ul>
       </div>
+      
     </nav>
   </div>
 
@@ -134,7 +151,7 @@
       </div>
       <div class="brokerage">
         <img class="footer-scholz" src="./images/SGlogoW150.png"></img>
-        <span>HomeLife Bernie Scholz Agencies</span>
+        <span>HomeLife Benchmark Realty Corp</span>
       </div>
     </footer>
   </div>
