--- a/south-surrey-townhouses.html
+++ b/south-surrey-townhouses.html
@@ -7,6 +7,7 @@
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!--Import materialize.css-->
    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+   <link type="text/css" rel="stylesheet" href="css/material.min.css"  media="screen,projection"/>
    <link rel="stylesheet" href="main.css">
    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
@@ -64,15 +65,13 @@
     </nav>
   </div>
 
-  <div class="search-content">
-    <!-- START REALTYNINJA EMBED CODE -->
-    <style>#embeded iframe{ width: 100%; }</style>
-    <div id="embeded"></div>
-    <script src="https://scotthagan.realtyninja.com/static/js/jquery.js"></script>
-    <script src="https://scotthagan.realtyninja.com/static/js/easyXDM/easyXDM.min.js"></script>        
-    <script src="https://scotthagan.realtyninja.com/static/js/embed_js.js" rel="responsive" url="mlsr-search" id="rn_embed_script"></script>        
-    <!-- END REALTYNINJA EMBED CODE -->
-  </div>
+  <!-- START REALTYNINJA EMBED CODE -->
+  <style>#embeded iframe{ width: 100%; }</style>
+  <div id="embeded"></div>
+  <script src="https://scotthagan.realtyninja.com/static/js/jquery.js"></script>
+  <script src="https://scotthagan.realtyninja.com/static/js/easyXDM/easyXDM.min.js"></script>        
+  <script src="https://scotthagan.realtyninja.com/static/js/embed_js.js" rel="responsive" url="south-surrey-townhouses" id="rn_embed_script"></script>        
+  <!-- END REALTYNINJA EMBED CODE -->
 
   <div class="footer-wrapper">
     <footer>
@@ -102,14 +101,14 @@
         <a href="https://www.facebook.com/ScholzGroupRealEstate/"><i class="fab fa-facebook"></i></a>
       </div>
       <div class="brokerage">
-        <img class="footer-scholz" src="./images/SGlogoW150.png"></img>
         <span>HomeLife Benchmark Realty Corp</span>
       </div>
     </footer>
   </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./js/materialize.min.js"></script>
-  <script type="text/javascript"src="./js/index.js"></script>
+  <script type="text/javascript" src="/js/materialize.min.js"></script>
+  <script type="text/javascript" src="/js/material.min.js"></script>
+  <script type="text/javascript"src="/js/index.js"></script>
 </body>
 </html>
