--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!--Import materialize.css-->
    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+   <link type="text/css" rel="stylesheet" href="css/material.min.css"  media="screen,projection"/>
    <link rel="stylesheet" href="main.css">
    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
@@ -35,17 +36,35 @@
               <li class="drop"><a href="/sold.html">Sold</a></li>
               <li class="drop"><a href="/search.html">Search</a></li>
             </ul>
-          <li class="nav-link"><a href="/mortgage.html">MORTGAGE CALCULATOR</a></li>
-          <li class="nav-link"><a class="dropdown-button" href="#!" data-target="dropdown2">ABOUT<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li class="nav-link"><a class="dropdown-button" href="#!" data-target="dropdown2">CITIES<i class="material-icons right">arrow_drop_down</i></a></li>
             <ul id="dropdown2" class="dropdown-content">
+              <li class="drop"><a class="nested-dropdown-button" href="#!" data-target="dropdown3">White Rock<i class="material-icons right">chevron_right</i></a></li>
+              <li class="drop"><a class="nested-dropdown-button" href="#!" data-target="dropdown4">South Surrey<i class="material-icons right">chevron_rightt</i></a></li>
+            </ul>
+            <ul id="dropdown3" class="dropdown-content">
+                <li class="nested-drop"><a href="/white-rock-condos.html">White Rock Condos</a></li>
+                <li class="nested-drop"><a href="/white-rock-townhouses.html">White Rock Townhouses</a></li>
+                <li class="nested-drop"><a href="/white-rock-homess.html">White Rock Homes</a></li>
+              </ul>
+           
+            <ul id="dropdown4" class="dropdown-content">
+              <li class="nested-drop"><a href="#!">South Surrey Condos</a></li>
+              <li class="nested-drop"><a href="#!">South Surrey Townhouses</a></li>
+              <li class="nested-drop"><a href="#!">South Surrey Homes</a></li>
+            </ul>
+          <li class="nav-link"><a href="/mortgage.html">MORTGAGE CALCULATOR</a></li>
+          <li class="nav-link"><a class="dropdown-button" href="#!" data-target="dropdown5">ABOUT<i class="material-icons right">arrow_drop_down</i></a></li>
+            <ul id="dropdown5" class="dropdown-content">
               <li class="drop"><a href="#!">Testimonials</a></li>
               <li class="drop"><a href="/chris.html">Meet Chris</a></li>
             </ul>
           <li class="nav-link"><a href="/contact.html">CONTACT</a></li>
         </ul>
       </div>
+      
     </nav>
   </div>
+
 
   <div class='home-banner'>
     <div class='banner-content'>
@@ -56,7 +75,7 @@
         <h5 class='CTA'>HOME EVALUATIONS ARE OBLIGATION FREE</h5>
         <div class='sub-CTA'>
           <h5>Let's connect & discuss your needs.</h5>
-          <a id="connect-btn" class="waves-effect waves-light btn">connect</a>
+          <a id="connect-btn" class="waves-effect waves-light btn" href="/contact.html">connect</a>
         </div>
       </div>
     </div>
@@ -101,14 +120,14 @@
         <a href="https://www.facebook.com/ScholzGroupRealEstate/"><i class="fab fa-facebook"></i></a>
       </div>
       <div class="brokerage">
-        <img class="footer-scholz" src="./images/SGlogoW150.png"></img>
-        <span>HomeLife Bernie Scholz Agencies</span>
+        <span>HomeLife Benchmark Realty Corp</span>
       </div>
     </footer>
   </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="/js/materialize.min.js"></script>
-  <script type="text/javascript"src="/js/index.js"></script>
+  <script type="text/javascript" src="./js/materialize.min.js"></script>
+  <script type="text/javascript" src="./js/material.min.js"></script>
+  <script type="text/javascript"src="./js/index.js"></script>
 </body>
 </html>
